--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/The-Euphoric-Meows/favoriteThings#readme",
   "dependencies": {
-    "node": "^19.3.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.2",
+    "node": "18.12.1"
   }
 }
