--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot\" \"npm:server\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server/server.js",
     "start": "webpack-dev-server --mode development --open"
@@ -19,7 +20,9 @@
   },
   "homepage": "https://github.com/The-Euphoric-Meows/favoriteThings#readme",
   "dependencies": {
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
